feat: add file expiration support

--- a/modules/our-files/src/main/resources/content/Language.properties
+++ b/modules/our-files/src/main/resources/content/Language.properties
@@ -2,3 +2,23 @@ our-files.config.name=Our Files
 our-files.config.desc=Our Files Config
 our-files.config.form-id.name=Form ID
 our-files.config.form-id.desc=Form ID from Site Settings > Content & Data > Forms
+our-files.config.interval.name=Interval
+our-files.config.interval.desc=Interval at which the scheduled task is checking for expired links.
+our-files.config.frequency.name=Frequency
+our-files.config.frequency.desc=Frequency to use with the interval for the scheduled task expiring links.
+our-files.config.frequency.second=Second
+our-files.config.frequency.minute=Minute
+our-files.config.frequency.hour=Hour
+our-files.config.frequency.day=Day
+our-files.config.frequency.week=Week
+our-files.config.frequency.month=Month
+our-files.config.expiration-value.name=Expiration Value
+our-files.config.expiration-value.desc=Value to use in combination with Expiration Unit for link expiration.
+our-files.config.expiration-unit.name=Expiration Unit
+our-files.config.expiration-unit.desc=Time unit to use for link expiration.
+our-files.config.expiration-unit.second=Second
+our-files.config.expiration-unit.minute=Minute
+our-files.config.expiration-unit.hour=Hour
+our-files.config.expiration-unit.day=Day
+our-files.config.expiration-unit.week=Week
+our-files.config.expiration-unit.month=Month
